<resources>
    <string name="app_name">SocialTech</string>
    <string name="formacion">Formación</string>
    <string name="btAnadir">Añadir</string>
    <string name="errorCampos">Faltan campos a rellenar</string>
    <string name="camposCorrectos">Contacto añadido correctamente</string>
    <string name="total">El n° total de contactos es: 0</string>
    <string name="provincia">Provincia</string>
    <string name="edad">Edad: 0</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="edad2">Edad</string>
    <string name="sexo">Sexo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
