<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vcarmen.socialtech.ActivityContacto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formacion"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesFormacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provincia"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesProvincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edad2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detallesSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
