<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellidos"
            android:inputType="text" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Teléfono"
            android:inputType="phone"
            android:maxLength="9" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <MultiAutoCompleteTextView
            android:id="@+id/mactFormacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/formacion" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provincia"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spProvincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textSize="18dp" />

        <SeekBar
            android:id="@+id/sbEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/rbMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer" />
        </RadioGroup>

        <Button
            android:id="@+id/btAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btAnadir" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <ListView
            android:id="@+id/lvContactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>